[metadata]
name = django_fast_export
version = attr: django_fast_export.__version__
description = Fast exporting of data from the Django admin panel
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/django-fast-export/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    Django>=3.2
python_requires = >=3.8
python_requires > = 3.8

[options.packages.find]
exclude =
    tests
    tests.*
